--- a/sass/_commentaires.scss
+++ b/sass/_commentaires.scss
@@ -1,59 +1,58 @@
-*{
+* {
     box-sizing: border-box;
 }
 
-.flex{
+.flex {
     display: flex;
     justify-content: space-between;
     width: 100%;
 }
 
-.section-commentaire > img{
+.section-commentaire>img {
     width: 100%;
     height: 100%;
 }
 
-.boite-de-commentaire, .liste-commentaire
-{
+.boite-de-commentaire,
+.liste-commentaire {
     background: #fff;
     border-radius: 4px;
     box-shadow: 0 2px 2px #0002;
 }
 
-.session-commentaire{
-    width: 100%; /* Change to full width */
-    max-width: 650px; /* Set maximum width */
+.session-commentaire {
+    width: 100%;
+    max-width: 650px;
     margin: 0 auto;
 }
 
-.liste-commentaire{
+.liste-commentaire {
     width: 100%;
     margin-bottom: 12px;
 }
 
-.liste-commentaire .utilisateur{
+.liste-commentaire .utilisateur {
     display: flex;
     padding: 8px;
     overflow: hidden;
 }
 
-.liste-commentaire .utilisateur img{
+.liste-commentaire .utilisateur img {
     height: 38px;
     width: 38px;
     border-radius: 50%;
     margin-right: 10px;
 }
 
-.liste-commentaire .nom{
-    // text-transform: uppercase;
+.liste-commentaire .nom {
     font-weight: 600;
 }
 
-.liste-commentaire .jour{
+.liste-commentaire .jour {
     font-size: 12px;
 }
 
-.reponse{
+.reponse {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -61,7 +60,7 @@
     gap: 10px;
 }
 
-.icon{
+.icon {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -70,35 +69,35 @@
     gap: 5px;
 }
 
-.icon:hover{
+.icon:hover {
     color: #000;
     cursor: pointer;
 }
 
-.publication-commentaire .commentaire{
+.publication-commentaire .commentaire {
     padding: 0 0 15px 58px;
 }
 
-.boite-de-commentaire{
+.boite-de-commentaire {
     padding: 10px;
     overflow: hidden;
 }
 
-.boite-de-commentaire .utilisateur{
+.boite-de-commentaire .utilisateur {
     display: flex;
     width: min-content;
 }
 
-.boite-de-commentaire .image img{
+.boite-de-commentaire .image img {
     width: 24px;
     height: 24px;
     margin-right: 10px;
     border-radius: 50%;
 }
 
-.boite-de-commentaire textarea{
+.boite-de-commentaire textarea {
     background: #eee;
-    width: 100%; /* Change width to full */
+    width: 100%;
     height: 152px;
     margin: 10px 0;
     padding: 10px;
@@ -107,11 +106,11 @@
     box-shadow: 0 0 0 5px #0003;
 }
 
-.boite-de-commentaire textarea:focus{
+.boite-de-commentaire textarea:focus {
     outline-color: #009cff;
 }
 
-.boite-de-commentaire .commentaire-soumission{
+.boite-de-commentaire .commentaire-soumission {
     float: right;
     padding: 6px 14px;
     border: none;
@@ -121,13 +120,12 @@
     border-radius: 2px;
 }
 
-.boite-de-commentaire .commentaire-soumission:hover{
+.boite-de-commentaire .commentaire-soumission:hover {
     background: #027ecc;
 }
 
-/* Media Query for devices with minimum width of 768px */
 @media only screen and (min-width: 768px) {
-    .session-commentaire{
+    .session-commentaire {
         width: 650px;
     }
 }
