--- a/sass/effet/_diagonal.scss
+++ b/sass/effet/_diagonal.scss
@@ -1,4 +1,6 @@
-*, *::before, *::after{
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
@@ -7,7 +9,7 @@
     isolation: isolate;
 }
 
-.diagonal::after{
+.diagonal::after {
     position: absolute;
     content: "";
     top: 0;
