--- a/style.css
+++ b/style.css
@@ -93,7 +93,8 @@ body {
   align-items: center;
 }
 
-.global > section, .global > footer {
+.global > section,
+.global > footer {
   flex: 0 1 1100px;
   padding: 5rem;
 }
@@ -245,7 +246,6 @@ p {
   text-align: center;
 }
 
-/* Media query pour le mode desktop */
 @media only screen and (min-width: 768px) {
   #footer {
     justify-content: space-around;
@@ -350,15 +350,16 @@ p {
   height: 100%;
 }
 
-.boite-de-commentaire, .liste-commentaire {
+.boite-de-commentaire,
+.liste-commentaire {
   background: #fff;
   border-radius: 4px;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1333333333);
 }
 
 .session-commentaire {
-  width: 100%; /* Change to full width */
-  max-width: 650px; /* Set maximum width */
+  width: 100%;
+  max-width: 650px;
   margin: 0 auto;
 }
 
@@ -433,7 +434,7 @@ p {
 
 .boite-de-commentaire textarea {
   background: #eee;
-  width: 100%; /* Change width to full */
+  width: 100%;
   height: 152px;
   margin: 10px 0;
   padding: 10px;
@@ -460,7 +461,6 @@ p {
   background: #027ecc;
 }
 
-/* Media Query for devices with minimum width of 768px */
 @media only screen and (min-width: 768px) {
   .session-commentaire {
     width: 650px;
